duniverse/menhirLib.20200211/test/static/bad/type-ill-kinded.mly
%token A B
%start<unit> main
%type<unit> phrase (* ill-kinded: phrase is a parameterized nonterminal symbol *)

%%

main:
  A phrase(B) A {}

phrase(X):
  X* {}
