duniverse/menhirLib.20200211/test/static/bad/type-ill-kinded.exp
File "type-ill-kinded.mly", line 3, characters 12-18:
Error: how is the symbol "phrase" parameterized?
It is used at sorts * and (*) -> *.
The sort * is not compatible with the sort (*) -> *.
